--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -7,7 +7,9 @@
         <h1 class="display-4 text-primary">Bienvenue sur Commerce Local 🌿</h1>
         <p class="lead">Découvrez et commandez des produits frais et artisanaux directement auprès des producteurs de votre région.</p>
         <hr class="my-4">
-        
+        <p>Connectez-vous pour accéder à votre espace personnel, découvrir nos produits ou passer commande.</p>
+        <a class="btn btn-success btn-lg" href= "Utilisateur/Login" role="button">Se connecter</a>
+        <a class="btn btn-outline-primary btn-lg" href="Utilisateur/Register" role="button">S'inscrire</a>
     </div>
 
     <div class="row mt-5">
